--- a/index.html
+++ b/index.html
@@ -7,18 +7,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Password Generator</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Lato:wght@400;900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div>
-    <h1>Generate a<br> random password </h1>
-    <p>Never use an insecure password again.</p>
+  <div class="container">
+    <div class="header">
+      <h1 class="white-header">Generate a</h1><br>
+      <h1 class="green-header">random password</h1>
+    </div>
+    <p class="gray-text">Never use an insecure password again.</p>
 
     <button id="getPasswordButton">Generate Passwords</button>
   </div></br>
-  <div id="showPasswords1"></div>
-  <div id="showPasswords2"></div>
+
+  <div>
+    <div id="showPasswords1"></div>
+    <div id="showPasswords2"></div>
+  </div>
 
   <script src="index.js"></script>
 </body>
